// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/comment/CommentText should properly format tagged comment 1`] = `
<div
  className="bcs-comment-text"
>
  How u doing 
  <UserLink
    className="bcs-comment-mention"
    data-resin-target="activityfeed-mentionlink"
    id="2030326577"
    key="1-123"
    name="@Young Jeezy"
  />
  ?
</div>
`;

exports[`elements/content-sidebar/ActivityFeed/comment/CommentText should properly handle unicode variants of @ in tagged comments 1`] = `
<div
  className="bcs-comment-text"
>
  Hi 
  <UserLink
    className="bcs-comment-mention"
    data-resin-target="activityfeed-mentionlink"
    id="123"
    key="1-123"
    name="﹫Half"
  />
   
  <UserLink
    className="bcs-comment-mention"
    data-resin-target="activityfeed-mentionlink"
    id="222"
    key="3-123"
    name="＠Full"
  />
   
  <UserLink
    className="bcs-comment-mention"
    data-resin-target="activityfeed-mentionlink"
    id="432"
    key="5-123"
    name="@Latin"
  />
</div>
`;
